Updating spec file = PublicApiSpecs/CMS/Blog Settings/Rollouts/635/v3/blogSettings.json

--- a/PublicApiSpecs/CMS/Blog Settings/Rollouts/635/v3/blogSettings.json
+++ b/PublicApiSpecs/CMS/Blog Settings/Rollouts/635/v3/blogSettings.json
@@ -21,38 +21,6 @@
     "name" : "Blogs"
   } ],
   "paths" : {
-    "/cms/v3/blog-settings/settings/multi-language/update-languages" : {
-      "post" : {
-        "tags" : [ "Blogs" ],
-        "operationId" : "post-/cms/v3/blog-settings/settings/multi-language/update-languages",
-        "parameters" : [ ],
-        "requestBody" : {
-          "description" : "The JSON representation of the UpdateLanguagesRequest object.",
-          "content" : {
-            "application/json" : {
-              "schema" : {
-                "$ref" : "#/components/schemas/UpdateLanguagesRequestVNext"
-              }
-            }
-          },
-          "required" : true
-        },
-        "responses" : {
-          "default" : {
-            "$ref" : "#/components/responses/Error"
-          },
-          "200" : {
-            "description" : "successful operation",
-            "content" : { }
-          }
-        },
-        "security" : [ {
-          "oauth2" : [ "content" ]
-        }, {
-          "private_apps" : [ "content" ]
-        } ]
-      }
-    },
     "/cms/v3/blog-settings/settings/{blogId}/revisions" : {
       "get" : {
         "tags" : [ "Blogs" ],
@@ -108,6 +76,38 @@
           },
           "default" : {
             "$ref" : "#/components/responses/Error"
+          }
+        },
+        "security" : [ {
+          "oauth2" : [ "content" ]
+        }, {
+          "private_apps" : [ "content" ]
+        } ]
+      }
+    },
+    "/cms/v3/blog-settings/settings/multi-language/update-languages" : {
+      "post" : {
+        "tags" : [ "Blogs" ],
+        "operationId" : "post-/cms/v3/blog-settings/settings/multi-language/update-languages",
+        "parameters" : [ ],
+        "requestBody" : {
+          "description" : "The JSON representation of the UpdateLanguagesRequest object.",
+          "content" : {
+            "application/json" : {
+              "schema" : {
+                "$ref" : "#/components/schemas/UpdateLanguagesRequestVNext"
+              }
+            }
+          },
+          "required" : true
+        },
+        "responses" : {
+          "default" : {
+            "$ref" : "#/components/responses/Error"
+          },
+          "200" : {
+            "description" : "successful operation",
+            "content" : { }
           }
         },
         "security" : [ {
@@ -668,13 +668,11 @@
         "properties" : {
           "before" : {
             "type" : "string",
-            "description" : "A paging cursor token for retrieving previous pages.",
-            "example" : ""
+            "description" : "A paging cursor token for retrieving previous pages."
           },
           "link" : {
             "type" : "string",
-            "description" : "A URL that can be used to retrieve the previous pages' results.",
-            "example" : ""
+            "description" : "A URL that can be used to retrieve the previous pages' results."
           }
         },
         "description" : "Model definition for a previous page"
@@ -822,13 +820,11 @@
         "properties" : {
           "link" : {
             "type" : "string",
-            "description" : "A URL that can be used to retrieve the next page results.",
-            "example" : ""
+            "description" : "A URL that can be used to retrieve the next page results."
           },
           "after" : {
             "type" : "string",
-            "description" : "A paging cursor token for retrieving subsequent pages.",
-            "example" : ""
+            "description" : "A paging cursor token for retrieving subsequent pages."
           }
         },
         "description" : "Model definition for a next page."
